--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
 body {
     margin: 0;
     font-family: 'Ubuntu', sans-serif;
-    font-size: 1.25rem;
+    font-size: 1.125rem;
     font-weight: 300;
 }
 
-
+img {
+    max-width: 100%;
+    display: block;
+}
 
 /* 
 TYPOGRAPHY
@@ -16,6 +19,7 @@ h3 {
     font-family: 'Lora', serif;
     font-weight: 400;
     color: #143774;
+    margin-top: 0;
 }
 
 h1 {
@@ -67,6 +71,11 @@ strong {
     text-decoration: underline;
 }
 
+.article-info {
+    margin: 2 em 0;
+}
+
+
 /* LAYOUT */
 
 .container {
@@ -76,29 +85,47 @@ strong {
     margin: 0 auto;
 }
 
-.container-nav {
+.container-flex {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 
 
-@media (max-width:675px) {
-    .container-nav {
-        flex-direction: column;
-    }
-}
+
 
 header {
-    /* text-align: center; */
     background: #f8f8f8;
     padding: 2em 0;
+    text-align: center;
+    margin-bottom: 2em;
 }
 
-@media (max-width:675px) {
-    header {
-        text-align: center;
+
+footer {
+    background: #143774;
+    color: white;
+    text-align: center;
+    padding: 1em 0;
+}
+
+@media (min-width: 675px) {
+    .container-flex {
+        flex-direction: row;
+
+    }
+
+    main {
+        width: 70%;
+    }
+
+    aside {
+        width: 20%;
+        min-width: 250px;
+        margin-left: 1em;
     }
 }
+
 
 /* NAVIGATION */
 
@@ -144,4 +171,111 @@ nav a:focus {
         margin: .5em 0;
 
     }
+}
+
+/* ARTICLES */
+
+.article-featured {
+    border-bottom: #707070 1px solid;
+    padding-bottom: 2em;
+    margin-bottom: 2em;
+}
+
+.article-recent {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 2em;
+}
+
+
+.article-recent-main {
+    order: 2;
+}
+
+.article-recent-secondary {
+    order: 1;
+}
+
+@media (min-width: 675px) {
+    .article-recent {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .article-recent-main {
+        width: 68%;
+    }
+
+    .article-recent-secondary {
+        width: 30%;
+    }
+
+    .article-image {
+        width: 100%;
+        min-height: 250px;
+        object-fit: cover;
+    }
+
+    .article-featured {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .article-image {
+        order: -2;
+    }
+
+    .article-info {
+        order: -1;
+    }
+}
+
+
+.widget-title,
+.recent-post-title {
+    font-size: 1rem;
+}
+
+.widget-title {
+    font-size: 1rem;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
+}
+
+/* titles position and info overlaping */
+/* 
+@media (min-width: 500px) {
+    .article-recent-main {
+        margin-top: -2em;
+    }
+
+    .article-info {
+        text-align: right;
+    }
+} */
+
+
+/* WIDGETS */
+
+.sidebar-widget {
+    border: 20px solid #efefef;
+    margin-bottom: 2em;
+    padding: 1em;
+}
+
+.widget-recent-post {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid #707070;
+    margin-bottom: 1em;
+}
+
+
+.widget-recent-post:last-child {
+    border: 0;
+    margin: 0;
+}
+
+.widget-image {
+    order: -1;
 }
