about me and recent posts pages added

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,13 @@ img {
     display: block;
 }
 
+.image-full {
+    max-height: 350px;
+    width: 100%;
+    object-fit: cover;
+    margin-bottom: 2em;
+}
+
 /* 
 TYPOGRAPHY
  */
@@ -25,6 +32,11 @@ h3 {
 h1 {
     font-size: 2rem;
     margin: 0;
+}
+
+
+h3 {
+    color: #1792d2;
 }
 
 a {
@@ -73,6 +85,22 @@ strong {
 
 .article-info {
     margin: 2 em 0;
+}
+
+.widget-title,
+.widget-recent-post-title {
+    font-size: 1rem;
+}
+
+
+.widget-title {
+
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
+}
+
+.widget-recent-post-title {
+    color: #143774;
 }
 
 
